# rpi-gpio-example

./: BUILD.txt  CMakeLists.txt
gpio-app/: CMakeLists.txt
gpio-app/src/: gpio-app.c
gpio-lib/: CMakeLists.txt
gpio-lib/include/: gpio.h
gpio-lib/src/: gpio.c
